# mouse_maze

./: .gitignore  Cargo.toml  asdasd.txt
python/occupancy/: main.py  new_occupancy.py  occ0.py  pyproject.toml
report/: issues.tex  main.aux  main.out  main.tex  path_finding.text  python0.md  reintroduction.tex  rust0.md  small_map.aux  small_map.tex
report/hw1robotics/: issues.tex  main.tex  map_generation.tex  path_finding.tex  reintroduction.tex
report/presentation3/: README.md  written_report
report/presentation3/powerpoint/: pres3.aux  pres3.nav  pres3.out  pres3.tex  pres3.toc  pres3.vrb
report/presentation3/powerpoint/sections/: conclusion.tex  explaination.tex  introduction.tex  methodology.tex  recap.tex
src/: LIDAR.md  LIDAR2.md  brain.rs  brain.rs.sadasd  game_integration.rs  lidar.rs  main.rs  maze_maker.rs  mouse.rs  ndt.rs
src/maze_solving/: hand_on_wall.rs
