[project]
name = "occupancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bresenham>=0.2.1",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pathfinding>=1.0.18",
    "poethepoet>=0.37.0",
    "polars>=1.34.0",
    "ruff>=0.13.1",
    "scikit-image>=0.25.2",
]
